force-app/main/default/objects/Skill_set__c/Skill_set__c.object-meta.xml
<CustomObject>
    <label>SkillSet</label>
    <nameField>
        <label>Skill set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SkillSet</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>