force-app/main/default/objects/Skill_set__c/fields/Computers__c.field-meta.xml
<CustomField>
    <fullName>Computers__c</fullName>
    <label>Computer Science</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Computer_Science__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>SalesForce</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>