force-app/main/default/objects/Skill_set__c/fields/EMPLOYEE__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEE__c</fullName>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>SkillSet</relationshipLabel>
    <relationshipName>SkillSet</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>