force-app/main/default/objects/Skill_set__c/fields/MBA__c.field-meta.xml
<CustomField>
    <fullName>MBA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MBA</label>
    <type>Checkbox</type>
</CustomField>