force-app/main/default/objects/Skill_set__c/fields/MBASection__c.field-meta.xml
<CustomField>
    <fullName>MBASection__c</fullName>
    <label>MBA</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MBA__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Human Resource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>