force-app/main/default/objects/Skill_set__c/fields/New_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Field__c</fullName>
    <description>This referring to the New field</description>
    <label>New_Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>