force-app/main/default/objects/Skill_set__c/validationRules/select_one.validationRule-meta.xml
<ValidationRule>
    <fullName>select_one</fullName>
    <active>true</active>
    <errorConditionFormula>Computer_Science__c  &amp;&amp;  MBA__c</errorConditionFormula>
    <errorMessage>Select only one skill</errorMessage>
</ValidationRule>